<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="#000000"
    tools:context="ambush.userProfileActivity">
    <TextView
        android:text="@string/player_name"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textSize="28sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/nameInProfile"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/nameInProfile"
        android:layout_alignParentStart="true">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:id="@+id/profilePicture"
            android:background="#0F0F0F"
            android:layout_marginTop="0dp"
            android:layout_below="@+id/nameInProfile"
            android:layout_alignParentStart="true"
            tools:ignore="NotSibling"
            android:contentDescription="@string/profile_picture" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/uploadImageButton"
            android:text="@string/upload_image"
            android:textAllCaps="false"
            android:layout_below="@+id/profilePicture"
            android:layout_alignEnd="@+id/profilePicture" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalPlayInProfile"
            android:text="@string/total_play"
            android:textColor="#FFFFFF"
            android:layout_toEndOf="@id/profilePicture"
            android:layout_marginLeft="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/victoryInProfile"
            android:text="@string/total_victory"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/totalPlayInProfile"
            android:layout_toEndOf="@id/profilePicture"
            android:layout_marginLeft="5dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/defeatInProfile"
            android:text="@string/total_defeat"
            android:textColor="#FFFFFF"
            android:layout_toEndOf="@id/profilePicture"
            android:layout_marginLeft="5dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/victoryInProfile"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/escapeInProfile"
            android:text="@string/total_escape"
            android:textColor="#FFFFFF"
            android:layout_toEndOf="@id/profilePicture"
            android:layout_marginLeft="5dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/defeatInProfile"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/counterAttackInProfile"
            android:text="@string/total_counterattack"
            android:textColor="#FFFFFF"
            android:layout_toEndOf="@id/profilePicture"
            android:layout_marginLeft="5dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/escapeInProfile"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/coinsInProfile"
            android:text="@string/coins"
            android:textColor="#FFFFFF"
            android:layout_toEndOf="@id/profilePicture"
            android:layout_marginLeft="5dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/counterAttackInProfile"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pointsInProfile"
            android:text="@string/points"
            android:textColor="#FFFFFF"
            android:layout_toEndOf="@id/profilePicture"
            android:layout_marginLeft="5dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/coinsInProfile"
            />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layoutDirection="ltr">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weaponInProfile"
            android:contentDescription="@string/player_weapons" />
    </ScrollView>
</RelativeLayout>
